# sylpheed-notify

./: .gitignore  .gitmodules  .travis.yml  ChangeLog  Makefile.am  NEWS  README  README.ja.txt  build.sh  configure.ac  growlx.xpm  sylnotify.c  sylnotify.h  version.rc
doc/: README.ja.txt
macros/: sylplugin_factory.m4
po/: ja.po  sylnotify.pot
res/: Makefile.am  growl.xpm  version.rc  version.rc.in
src/: Makefile.am  copying.h  sylnotify.c  sylnotify.h
test/: Makefile.am  test-libappindicator.c  test-libnotify.c  test-notification.c
